Avalara Fullqa/src/Geopointe/objects/Shape__c.object
<CustomObject>
    <description>Keeps track of custom shapes for use on the Map page.</description>
    <fields>
        <fullName>Center_Label__c</fullName>
        <description>The center label for shape field circles.</description>
        <label>Center Label</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Center__c</fullName>
        <description>The center point of a circle or the centroid of a polygon.</description>
        <label>Center</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <inlineHelpText>The hexadecimal color for this shape, such as #8ce013.</inlineHelpText>
        <label>Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>A short description for this shape.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dissolve__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, and the shape is comprised of multiple shapes it will dissolve the shapes.</inlineHelpText>
        <label>Dissolve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Folder__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Folder</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>GP_Folder__c.Type__c</field>
                <operation>equals</operation>
                <value>Shape</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GP_Folder__c</referenceTo>
        <relationshipLabel>Geopointe Shapes</relationshipLabel>
        <relationshipName>Geopointe_Shapes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Label_Point__c</fullName>
        <description>The point inside a polygon for displaying a label. Computed when polygon is saved.</description>
        <label>Label Point</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Lat_Lng_10__c</fullName>
        <description>See Coordinates 1 field.</description>
        <label>Coordinates 10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lat_Lng_1__c</fullName>
        <description>These fields contains longitude and latitude data for shapes. The structure follows the GeoJSON spec for coordinates: [[[lng, lat], [lng, lat]]] . IMPORTANT: Field name is Lat_Lng_n__c but GeoJSON stores ongitude first, latitude second. If array of lng/lat points is too long for one field it should be split across mutliple Lat_Lng_n__c fields.</description>
        <label>Coordinates 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lat_Lng_2__c</fullName>
        <description>See Coordinates 1 field.</description>
        <label>Coordinates 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lat_Max__c</fullName>
        <label>Max Latitude</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lat_Min__c</fullName>
        <externalId>true</externalId>
        <label>Min Latitude</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lng_Max__c</fullName>
        <label>Max Longitude</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lng_Min__c</fullName>
        <externalId>true</externalId>
        <label>Min Longitude</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opacity__c</fullName>
        <inlineHelpText>The opacity value for this shape. Valid ranges are 0.00 - 1.00</inlineHelpText>
        <label>Opacity</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Radius__c</fullName>
        <inlineHelpText>The radius for circle shapes. Kilometer or miles is defined by the Units field.</inlineHelpText>
        <label>Radius</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Straddles_180__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only applies to Standard shapes. If checked, the shape straddles the 180th meridian.</inlineHelpText>
        <label>Straddles 180th Meridian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Polygon</fullName>
                </value>
                <value>
                    <fullName>Circle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <inlineHelpText>Miles or kilometers designating the unit of measure for this shape.</inlineHelpText>
        <label>Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kilometers</fullName>
                </value>
                <value>
                    <fullName>Miles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Usage_Type__c</fullName>
        <label>Usage Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Shape Field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Geopointe Shape</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Usage_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shape Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Shapes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>